freshman first commit

--- a/index.html
+++ b/index.html
@@ -10,5 +10,10 @@
     <nav>
         leader is in charge
     </nav>
+    <main>
+        this is fresh man in charge
+        hello
+        i'm making first project
+    </main>
 </body>
 </html>
