--- a/index.html
+++ b/index.html
@@ -9,6 +9,10 @@
 <body>
     <nav>
         leader is in charge
+        haha
+        hehe
+        yeah
+        leader is in charge
     </nav>
 </body>
 </html>
